# VecDBMVP

./: .gitignore  CMakeLists.txt  README.md
data/demo_collection/: manifest.json
docs/: 00_overview.md  01_architecture.md  02_design_decisions.md  03_distance.md  04_vector_store.md  05_bruteforce.md  06_recall_benchmark.md  07_hnsw_layer0.md  08_hnsw_full.md  devlog.md
scripts/: generate_csv.py
src/: main.cpp
src/vecdb/: Bruteforce.cpp  Bruteforce.h  Collection.cpp  Collection.h  Csv.cpp  Csv.h  Distance.cpp  Distance.h  Eval.cpp  Eval.h  Hnsw.cpp  Hnsw.h  Hnsw0.cpp  Hnsw0.h  Metadata.cpp  Metadata.h  SearchResult.h  Serializer.cpp  Serializer.h  VectorStore.cpp  VectorStore.h  Visited.h
tests/: TestMain.cpp  run_all_tests_verbose.ps1  run_csv_cli_test.ps1
